# baxter

baxter_moveit/: CMakeLists.txt  package.xml
baxter_moveit/kinematics/: CMakeLists.txt
baxter_moveit/kinematics/include/: ik.h
baxter_moveit/kinematics/launch/: ik.launch
baxter_moveit/kinematics/src/: ik.cpp
checkers/: CMakeLists.txt  package.xml
checkers/include/: checkers.h
checkers/src/: checkers.cpp
checkers_common/: CMakeLists.txt  package.xml
checkers_common/srv/: moveChecker.srv  removeChecker.srv  unkingChecker.srv
ik_baxter/: CMakeLists.txt  package.xml
ik_baxter/src/: ik_baxter_node.cpp
