<?xml version="1.0"?>
<package>
  <name>ik_baxter</name>
  <version>0.0.0</version>
  <description>The ik_baxter package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jordan@todo.todo">jordan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>baxter_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>baxter_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>utilities</run_depend>

</package>
